update add background sound

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     </footer> 
     <!-- Attached gameOverSound  -->
     <audio id="gameOverSound" volume="1000" src="GameOver.mp3"></audio> 
+    
+    <!-- Attached background music -->
+    <audio id="backgroundSound" src="BackgroundSound.mp3" type="audio/mp3"  autoplay  loop ></audio>
+    <!-- <audio  autoplay loop >
+    <source src="BackgroundSound.mp3" type="audio/mp3">
+</audio> -->
     <!-- Attached JavaScript File  -->
     <script src="script.js"></script>
   </body>
